@@ -25,65 +25,65 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class TypeTreeTest {
 
-    public static ResourceLocator WALKER = PathWalker.builder()
-            .pathFinder(PathFinder::ClassFinder)
-            .contentFilter(new JsonContentFilter())
-            .depth(20)
-            .build();
+	public static ResourceLocator WALKER = PathWalker.builder()
+			.pathFinder(PathFinder::ClassFinder)
+			.contentFilter(new JsonContentFilter())
+			.depth(20)
+			.build();
 
-    public static List<TypeData> createDataList() {
-        var schematic = new TypeData("SCHEMATIC", Optional.empty(), Collections.emptyList());
-        var pickaxeSchematic = new TypeData("PICKAXE_SCHEMATIC", Optional.of(schematic.name()), Collections.emptyList());
-        var shovelSchematic = new TypeData("SHOVEL_SCHEMATIC", Optional.of(schematic.name()), Collections.emptyList());
-        var swordSchematic = new TypeData("SWORD_SCHEMATIC", Optional.of(schematic.name()), Collections.emptyList());
-        var saberSchematic = new TypeData("SABER_SCHEMATIC", Optional.of(swordSchematic.name()), Collections.emptyList());
-        var part = new TypeData("PART", Optional.empty(), Collections.emptyList());
-        var toolpart = new TypeData("TOOL_PART", Optional.of(part.name()), Collections.emptyList());
-        var handle = new TypeData("HANDLE", Optional.of(toolpart.name()), Collections.emptyList());
-        var material = new TypeData("MATERIAL", Optional.empty(), Collections.emptyList());
-        var wood = new TypeData("WOOD", Optional.of(material.name()), Collections.emptyList());
-        var oak = new TypeData("OAK", Optional.of("WOOD"), Collections.emptyList());
-        var metal = new TypeData("METAL", Optional.of(material.name()), Collections.emptyList());
-        var iron = new TypeData("IRON", Optional.of("METAL"), Collections.emptyList());
-        return List.of(wood, pickaxeSchematic, shovelSchematic, swordSchematic, saberSchematic, material, schematic, oak, part, toolpart, handle, metal, iron);
-    }
+	public static List<TypeData> createDataList() {
+		var schematic = new TypeData("SCHEMATIC", Optional.empty(), Collections.emptyList());
+		var pickaxeSchematic = new TypeData("PICKAXE_SCHEMATIC", Optional.of(schematic.name()), Collections.emptyList());
+		var shovelSchematic = new TypeData("SHOVEL_SCHEMATIC", Optional.of(schematic.name()), Collections.emptyList());
+		var swordSchematic = new TypeData("SWORD_SCHEMATIC", Optional.of(schematic.name()), Collections.emptyList());
+		var saberSchematic = new TypeData("SABER_SCHEMATIC", Optional.of(swordSchematic.name()), Collections.emptyList());
+		var part = new TypeData("PART", Optional.empty(), Collections.emptyList());
+		var toolpart = new TypeData("TOOL_PART", Optional.of(part.name()), Collections.emptyList());
+		var handle = new TypeData("HANDLE", Optional.of(toolpart.name()), Collections.emptyList());
+		var material = new TypeData("MATERIAL", Optional.empty(), Collections.emptyList());
+		var wood = new TypeData("WOOD", Optional.of(material.name()), Collections.emptyList());
+		var oak = new TypeData("OAK", Optional.of("WOOD"), Collections.emptyList());
+		var metal = new TypeData("METAL", Optional.of(material.name()), Collections.emptyList());
+		var iron = new TypeData("IRON", Optional.of("METAL"), Collections.emptyList());
+		return List.of(wood, pickaxeSchematic, shovelSchematic, swordSchematic, saberSchematic, material, schematic, oak, part, toolpart, handle, metal, iron);
+	}
 
-    @Test
-    void createValidTypeTree() {
-        var tree = new TypeTree();
-        createDataList().forEach(tree::addNode);
-        tree.resolve();
-        var testNodeSchematic = tree.find("SABER_SCHEMATIC");
-        var testNodeOak = tree.find("OAK");
-        assertTrue(testNodeSchematic.isPresent());
-        assertTrue(testNodeSchematic.get().parent().isPresent());
+	@Test
+	void createValidTypeTree() {
+		var tree = new TypeTree();
+		createDataList().forEach(tree::addNode);
+		tree.resolve();
+		var testNodeSchematic = tree.find("SABER_SCHEMATIC");
+		var testNodeOak = tree.find("OAK");
+		assertTrue(testNodeSchematic.isPresent());
+		assertTrue(testNodeSchematic.get().parent().isPresent());
 
-        assertTrue(testNodeOak.isPresent());
-        assertTrue(testNodeOak.get().parent().isPresent());
-    }
+		assertTrue(testNodeOak.isPresent());
+		assertTrue(testNodeOak.get().parent().isPresent());
+	}
 
-    @Test
-    void loadTypeTreeFromJson() throws URISyntaxException {
-        FileResourceLoader loader = new FileResourceLoader(CORE_PATH, WALKER, new DefaultMapper());
-        var tree = new TypeTree();
-        new TypeFactory().convertJsonToData(loader.load()).forEach(tree::addNode);
-        tree.resolve();
+	@Test
+	void loadTypeTreeFromJson() throws URISyntaxException {
+		FileResourceLoader loader = new FileResourceLoader(CORE_PATH, WALKER, new DefaultMapper());
+		var tree = new TypeTree();
+		new TypeFactory().convertJsonToData(loader.load()).forEach(tree::addNode);
+		tree.resolve();
 
-        var testNodeSchematic = tree.find("LONG_BOW");
-        assertTrue(testNodeSchematic.isPresent());
-        assertEquals("BOW", testNodeSchematic.get().parent().orElseThrow().name());
-    }
+		var testNodeSchematic = tree.find("LONG_BOW");
+		assertTrue(testNodeSchematic.isPresent());
+		assertEquals("BOW", testNodeSchematic.get().parent().orElseThrow().name());
+	}
 
-    @Test
-    void loadedTypeTree() throws URISyntaxException {
-        FileResourceLoader loader = new FileResourceLoader(CORE_PATH, WALKER, new DefaultMapper());
-        ResourcePool pool = new ResourcePool(ImmutableList.<DataResource>builder().addAll(loader.load()).build());
-        var tree = pool.createLoadedTypeTree();
-        var pick = tree.find("PICKAXE").orElseThrow();
-        var tool = tree.find("TOOL").orElseThrow();
-        var holdAble = tree.find("HOLDABLE").orElseThrow();
-        //Assertions.assertTrue(pick.resources().stream().anyMatch(element -> element.equals("pickaxe")));
-        //Assertions.assertTrue(tool.resources().stream().anyMatch(element -> element.equals("pickaxe")));
-        //Assertions.assertTrue(holdAble.resources().stream().anyMatch(element -> element.equals("pickaxe")));
-    }
+	@Test
+	void loadedTypeTree() throws URISyntaxException {
+		FileResourceLoader loader = new FileResourceLoader(CORE_PATH, WALKER, new DefaultMapper());
+		ResourcePool pool = new ResourcePool(ImmutableList.<DataResource>builder().addAll(loader.load()).build());
+		var tree = pool.createLoadedTypeTree();
+		var pick = tree.find("PICKAXE").orElseThrow();
+		var tool = tree.find("TOOL").orElseThrow();
+		var holdAble = tree.find("HOLDABLE").orElseThrow();
+		//Assertions.assertTrue(pick.resources().stream().anyMatch(element -> element.equals("pickaxe")));
+		//Assertions.assertTrue(tool.resources().stream().anyMatch(element -> element.equals("pickaxe")));
+		//Assertions.assertTrue(holdAble.resources().stream().anyMatch(element -> element.equals("pickaxe")));
+	}
 }
